Finishing with the profile page

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3741,13 +3741,32 @@ span.shortline5 {
 
 /* Save button */
 .save-button {
-  width: 100px;
+  width: 130px;
   height: 41px;
   color: #fff;
   background-color: #e67e22;
   border: none;
 }
 /* Save button */
+
+/* Edit button */
+.the-edit-button {
+  width: 130px;
+    height: 41px;
+    color: #442f2f;
+    background-color: #ffffff;
+    border: 2px solid #827b7b;
+}
+/* Edit button */
+
+.nav-bar-banner {
+  position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+    height: 100px;
+    background-color: rgba(255, 255, 255, 0.86);
+}
 
 /* -- new style for the nav div -- */
 .navigation-div {
@@ -3952,7 +3971,7 @@ hr{
 	height: 500px;
 	}
 	.banner-profile-info {
-	margin: 250px 0 0 390px;
+	/* Maybe */
 	}
     input.upload-custom-banner {
     cursor: pointer;
@@ -3969,13 +3988,13 @@ hr{
 
 @media (max-width: 1366px) {
 	.banner-profile-info {
-    margin: 235px 0 0 350px;
+    /* Maybe */
 }
 }
 
 @media (max-width: 1280px) {
 	.banner-profile-info {
-    margin: 235px 0 0 320px;
+    /* Maybe */
 }
 }
 
@@ -3997,7 +4016,7 @@ hr{
 	width:400px;
 }
 	.banner-profile-info {
-    margin: 235px 0 0 262px;
+    /* Maybe */
 }
 	.banner-profile-info p {
 	font-size:25px;
@@ -4010,10 +4029,10 @@ hr{
     min-height: 500px;
 }
 	.banner-profile .rslides {
-    height: 675px;
+    height: 500px;
 }
 	.banner-profile-info {
-    margin: 180px 0 0 262px;
+    /* Maybe */
 }
 input.upload-custom-banner {
     cursor: pointer;
@@ -4079,7 +4098,7 @@ input.upload-custom-banner {
     height: 600px;
 }
 	.banner-profile-info {
-    margin: 180px 0 0 205px;
+    /* Maybe */
 }
 	.grid figure, .grid .placeholder {
     width: 230px;
@@ -4176,7 +4195,7 @@ input.upload-custom-banner {
 
 @media (max-width: 667px) {
 	.banner-profile-info {
-    margin: 30px 0 0 177px;
+    /* Maybe */
 }
 	.banner-profile-info h3 {
 	font-size:35px;
@@ -4200,7 +4219,7 @@ input.upload-custom-banner {
     display:none;
 }
 	.banner-profile-info {
-    margin: 45px 0 0 165px;
+    /* Maybe */
 }
 	.banner-profile-info h3 {
 	padding:60px 0 10px;
@@ -4231,7 +4250,7 @@ input.upload-custom-banner {
 	top:-17px;
 }
 	.banner-profile-info {
-    margin: 60px 0 0 155px;
+    /* Maybe */
 }
 }
 
@@ -4247,7 +4266,7 @@ input.upload-custom-banner {
     height: 265px;
 }
 	.banner-profile-info {
-    margin: 20px 0 0 140px;
+    /* Maybe */
 }
 	.content-img {
     height: 332px;
@@ -4262,7 +4281,7 @@ input.upload-custom-banner {
 	font-size:25px;
 }
 	.banner-profile-info {
-    margin: 20px 0 0 97px;
+    /* Maybe */
 }
 	.content-img {
     height: 278px;
@@ -4326,7 +4345,7 @@ input.upload-custom-banner {
 
 @media (max-width: 384px) {
 	.banner-profile-info {
-    margin: 20px 0 0 45px;
+    /* Maybe */
 }
 	.about-me h3.text-center {
 		font-size:23px;
@@ -4385,7 +4404,7 @@ input.upload-custom-banner {
 
 @media (max-width: 320px) {
 	.banner-profile-info {
-    margin: 20px 0 0 0px;
+    /* Maybe */
 }
 	.contact-info p {
 	padding-bottom:5px;
