make edit screen different from show profile

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -81,7 +81,9 @@
 						</div>
 						<br /><br />
 						<div>
-							<button class="the-edit-button">Edit Profile</button>
+						<% if @profile.user.id == session[:user_id] %>
+							<button class="the-edit-button" onclick="window.location.href='/users/new/'">Edit Profile</button>
+						<% end %>
 						</div>
 						<br /><br />
 					</div>
@@ -114,8 +116,8 @@
 				<div class="navigation-div">
 					<ul class="nav nav-tabs">
 						<li class="active"><a data-toggle="tab" href="#home">New Listing</a></li>
-						<li><a data-toggle="tab" href="#menu3">My Listings</a></li>
-    					<li><a data-toggle="tab" href="#menu1">Inbox</a></li>
+						<li><a data-toggle="tab" href="#menu3">Listings</a></li>
+    					<li><a data-toggle="tab" href="#menu1">Mailbox</a></li>
   					</ul>
   				</div>
   				<br /><br />
@@ -128,19 +130,20 @@
                     			<tr>
                     				<td><p>Your service type</p></td>
                     				<td style="vertical-align: middle;">
-										<%= f.select :category_id, @categories.map {|c| [c.name, c.id]}, class: "form-control" %>
+										<%= f.select :category_id, @categories.map {|c| [c.name, c.id]}, {}, {required: 'true', autofocus: 'true', class: 'form-control'} %>
 									</td>
 								</tr>
 								<tr>
-                    				<td><p>Your service sub-category</p></td>
+                    				<!--<td><p>Your service sub-category</p></td>
                     				<td style="vertical-align: middle;">
-										<!-- sub-categories should be here and from database -->
-									</td>
+										 sub-categories should be here and from database 
+									</td>-->
 								</tr>
 								<tr>
                     				<td><p>Name of product</p></td>
                     				<td style="vertical-align: middle;">
 										<!-- name of product should be a form input textbox -->
+										<%= f.text_field :name_of_service, placeholder: "Service Name" , class: "form-control" %>
 									</td>
 								</tr>
 								<tr>
@@ -274,183 +277,3 @@
   
 		</div>
 <% end %>
-
-<script>
-
-$(".full_name").click(function(e){
-    $('.full_name_text').attr("contentEditable", "true");
-    $('.full_name_text').css("outline","none");
-    console.log("it");
-});
-
-$(".tagline").click(function(e){
-    $('.tagline_text').attr("contentEditable", "true");
-    $('.tagline_text').css("outline","none");
-    console.log("it");
-});
-
-$(".short_desc").click(function(e){
-    $('.short_desc_text').attr("contentEditable", "true");
-    $('.short_desc_text').css("outline","none");
-	$('.short_desc_text').text("");
-    console.log("it");
-});
-
-$(".long_desc").click(function(e){
-    $('.long_desc_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".address_text").click(function(e){
-    $('.address_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".address_text_2").click(function(e){
-    $('.address_text_2').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".phone_number_text").click(function(e){
-    $('.phone_number_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".phone_number_text").click(function(e){
-    $('.phone_number_text_2').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".email_text").click(function(e){
-    $('.email_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".email_text_2").click(function(e){
-    $('.email_text_2').attr("contentEditable", "true");
-    console.log("it");
-});
-
-function previewFile() {
-  var preview = document.querySelector('.custom-profile-banner');
-  var file    = document.querySelector('input[type=file].upload-custom-banner').files[0];
-  var reader  = new FileReader();
-
-  reader.addEventListener("load", function () {
-    preview.src = reader.result;
-  }, false);
-
-  if (file) {
-    reader.readAsDataURL(file);
-  }
-  console.log(file)
-  //console.log(document.querySelector('input[type=file].upload-custom-banner').files[0].name)
-}
-
-
-
-
-$('#save-changes').click(function(e) {
-		e.preventDefault();
-		var profile;
-		var formData = new FormData();
-    	$input = $("input[type=file].upload-custom-banner");
-		formData.append('profile[banner]', $input[0].files[0]);
-		formData.append('profile[name_of_agency]', $('.full_name_text').text().trim());
-		formData.append('profile[desc]', $('.long_desc_text').text().trim());
-		formData.append('profile[short_desc]', $('.short_desc_text').text().trim());
-		formData.append('profile[tagline]', $('.tagline_text').text().trim());
-		formData.append('address[physical_address]', $('.address_text').text().trim());
-		$('#slider').attr("value", function( i, val ){
-			profile = val;
-		});
-
-		$.ajax({
-		  url: "/profiles/"+profile,
-		 type: "PATCH",
-		 data: formData,
-		cache: false,
-  contentType: false,
-  processData: false,
-	  success: function(resp){ 
-			console.log(resp);
-			},
-		 fail:  function(resp){
-			console.log(resp);
-	   }
-		});
-
-
-});
-
-	$('.message-mail').click(function(e){
-		var messageId = $(this).attr('title');
-		var messageForm = new FormData();
-		messageForm.append('message[read]', 1);
-
-		$.ajax({
-		  url: "/messages/"+messageId,
-		 type: "PATCH",
-		 data: messageForm,
-		cache: false,
-  contentType: false,
-  processData: false,
-	  success: function(resp){ 
-			console.log(resp);
-			},
-		 fail:  function(resp){
-			console.log(resp);
-	   		}
-		});
-
-	});
-
-
-
-
-
-
-
-
-
-
-
-	$('#message-supplier').click(function(e){
-	e.preventDefault();
-	var messageId = $(this).attr('title');
-	var messageForm = new FormData();
-	messageForm.append('message[body]', $('#body').val().trim());
-	messageForm.append('message[profile_id]',$('.sender-this').html().trim());
-
-$.ajax({
-		url: "/messages/",
-		type: "POST",
-		data: messageForm,
-	   cache: false,
- contentType: false,
- processData: false,
-	 success: function(resp){ 
-		console.log(resp);
-		$('.alert').html("");
-		$('.modal-body').prepend("<div class='alert alert-success' role='alert'> <button aria-hidden='true' data-dismiss='alert' class='close' type='button'> × </button> Message sent sucessfully!</div>");
-		},
-		fail:  function(resp){
-		$('.alert').html("");
-		$('.modal-body').prepend("<div class='alert alert-danger' role='alert'> <button aria-hidden='true' data-dismiss='alert' class='close' type='button'> × </button>You cannot send this message at this time!</div>");
-		}
-	});
-});
-
-
-
-
-
-
-
-
-
-
-
-
-
-</script>
