--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -87,7 +87,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="search-form container overlay">
 				<%= form_tag({ controller: :mains, action: :search }, :method => "get", id: "search-form") do %>
 					<div class="col-md-6 col-sm-4 col-xs-12 search-no-padding-left search-no-padding-right">
-						<%= text_field_tag :q, params[:q], placeholder: "Supplier or Service" %>
+						<%= text_field_tag :q, params[:q], placeholder: "Supplier or Service", required: true %>
 					</div>
 					<div class="col-md-4 col-sm-4 hidden-xs search-no-padding-right">
 						<input type="text" placeholder="Location" name="location" />
@@ -474,12 +474,12 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
           					<div align="center">
           						<div class="key1">
 									<i class="fa fa-key" aria-hidden="true"></i>
-									<%= text_field_tag :email, nil, placeholder: :Email %>
+									<%= text_field_tag :email, nil, placeholder: :Email, required: true %>
 									<div class="clearfix"></div>
 								</div>
 								<div class="key1">
 									<i class="fa fa-lock" aria-hidden="true"></i>
-									<%= password_field_tag :password, nil, placeholder: :Password %>
+									<%= password_field_tag :password, nil, placeholder: :Password, required: true %>
 									<div class="clearfix"></div>
 								</div>
 								<%= submit_tag "Log In", class: "search-no-border btn-search" %>
