--- a/app/views/mains/_service_search.html.erb
+++ b/app/views/mains/_service_search.html.erb
@@ -13,6 +13,10 @@
 										</div>
 									<div class="clearfix"></div>
 								</div>
+								<div class="mid-2">
+									<p><%= item.name_of_service %></p>
+									<div class="clearfix"></div>
+								</div>
 								<div class="add" align="right">
 									<!-- <button class="btn btn-danger my-cart-btn my-cart-b" data-id="25" data-name="Peach Halves" data-summary="summary 25" data-price="4.50" data-quantity="1" data-image="images/of25.png">Add to Cart</button> -->
 									<!-- I'm putting a fake star rating system here, it needs to be called and replaced from the database --><br />
