--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -43,7 +43,7 @@
 						</div>
 						<br /><br />
 						<div align="center">
-							<p>Already have an account? <a href=".lgmd" data-toggle="modal">Log in</a></p>
+							<p>Already have an account? <a href="/user/login/">Log in</a></p>
 						</div>
 					<% end %>
 				</div>
