--- a/app/views/mains/_service_search.html.erb
+++ b/app/views/mains/_service_search.html.erb
@@ -7,7 +7,7 @@
 									<!-- All listings have to be read from the database -->
 								</div>
 								<div class="mid-2">
-									<p><%= item.desc_service %></p>
+									<p><%= item.desc_service[0..15] %></p>
 										<div class="block">
 											<div class="starbox small ghosting"> </div>				<!-- Ratings also from database -->
 										</div>
