--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -21,7 +21,11 @@
 									
 								</div>
 								<div class="mid-2">
-									<p><%= service.desc_service %></p>
+									<p><%= service.name_of_service %></p>
+									<div class="clearfix"></div>
+								</div>
+								<div class="mid-2">
+									<p><%= service.desc_service[0..15] %></p>
 										<div class="block">
 											<div class="starbox small ghosting"> </div>
 										</div>
