Worked on feedback and made changes to the buttons and some listings

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -576,6 +576,12 @@ span.fa.fa-shopping-cart.my-cart-icon {
     color: #fff;
 }
 
+.color-orange{
+  background-color: #e67e22 !important;
+  color: #fff !important;
+  border: none !important;
+}
+
 .search-no-padding-right{
   padding-right: 0;
 }
@@ -1216,7 +1222,7 @@ ul.product-qty {
 	color:#fff;
 }
 .fo-grid1 p a:hover {
-    color: #FAB005;
+    color: #fff;
 }
 .fo-grid1 p  i{
 	margin-right:7px;
@@ -1364,6 +1370,26 @@ ul.product-qty {
 }
 .the-modal-footer {
   text-align: center;
+}
+/* Feedback Modal */
+.fdbk-mdl {
+  width: 40%;
+  height: 150px;
+  padding: 5px 10px;
+}
+
+.fdbk-mdl-input {
+  width: 40%;
+    height: 40px;
+    padding: 5px 10px;
+}
+
+.fdbk-mdl-button {
+  height: 41px;
+    background-color: #e67e22;
+    color: #fff;
+    border: none;
+    width: 120px;
 }
 
 .key1  input[type="text"] ,.key1  input[type="password"]{
