--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -18,24 +18,21 @@
 							<% end %>
 							<div class="mid-1">
 								<div class="women">
-									
-									<!-- All listings have to be read from the database -->
 								</div>
 								<div class="mid-2">
-									<p><%= service.name_of_service %></p>
+									<p><b><%= service.name_of_service %></b></p>
 									<div class="clearfix"></div>
 								</div>
 								<div class="mid-2">
 									<p><%= service.desc_service %></p>
 										<div class="block">
-										<div class="starbox small ghosting"> </div>				<!-- Ratings also from database -->
+										<div class="starbox small ghosting"> </div>
 									</div>
 									<div class="clearfix"></div>
 								</div>
 
 								<div class="add" align="right">
-									<!-- <button class="btn btn-danger my-cart-btn my-cart-b" data-id="25" data-name="Peach Halves" data-summary="summary 25" data-price="4.50" data-quantity="1" data-image="images/of25.png">Add to Cart</button> -->
-									<!-- I'm putting a fake star rating system here, it needs to be called and replaced from the database --><br />
+									<br />
 									<a href="#" data-toggle="modal" data-target="#myModa<%= service.id %>">
 										<%= image_tag "app/viewer.png", class: "img-responsive" %>
 									</a>
@@ -63,7 +60,7 @@
 					</div>
 					<div class="col-md-7 span-1 ">
 						<div class="price_single">
-							Minimum Price:<span class="reducedfrom "><%= service.price %></span>
+							Minimum Price: <span class="reducedfrom "><%= service.price %></span>
 						
 							<div class="clearfix"></div>
 						</div>
@@ -84,11 +81,9 @@
 			</div>
 			<nav>
 				<ul class="pagination pagination-lg" style="margin-left:44%;">
-				<!-- <li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li> -->
 				<% 1.upto(@total_pages.to_i) do |n| %>
 					<li class="pag-<%= n %>"><%= link_to n, { controller: :services, action: :index, page: n } %></li>
 				<% end %>
-				<!-- <li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>-->
 				</ul>
 			</nav>
 		</div>
